Bug 1292870 - Record/replay clips and transforms properly in CanvasRenderingContext2D. r=Bas